--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-status-bar-height": "^2.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10"
   },
